src/lang24/phase/synan/Lang24Parser.java
// Generated from Lang24Parser.g4 by ANTLR 4.13.1

    package lang24.phase.synan;

	import java.util.*;
	import lang24.common.report.*;
	import lang24.data.ast.tree.*;
	import lang24.data.ast.tree.type.*;
	import lang24.data.ast.tree.stmt.*;
	import lang24.data.ast.tree.expr.*;
	import lang24.data.ast.tree.defn.*;
	import lang24.data.token.*;
	import lang24.phase.lexan.*;
	import lang24.phase.abstr.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Lang24Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENTS=1, STRING=2, CHARACTER=3, CARET=4, NOT=5, PLUS=6, MINUS=7, PREFIXOPERATOR=8, 
		POSTFIXOPERATOR=9, COLON=10, COMMA=11, DOT=12, LESS=13, GREATER=14, SEMICOLON=15, 
		NIL=16, NONE=17, OR=18, AND=19, SIZEOF=20, VOID=21, BOOL=22, CHAR=23, 
		INT=24, IF=25, ELSE=26, THEN=27, RETURN=28, WHILE=29, BOOLVAL=30, IDENTIFIER=31, 
		NUMBER=32, LBRACE=33, RBRACE=34, LPARENTHESIS=35, RPARENTHESIS=36, LBRACKET=37, 
		RBRACKET=38, EQUALS_R=39, NOTEQUALS_R=40, LESS_OR_EQUALS_R=41, GREATER_OR_EQUALS_R=42, 
		DIVIDE=43, STAR=44, PERCENT=45, EQUALS=46, WS=47;
	public static final int
		RULE_source = 0, RULE_definitions = 1, RULE_typeDefinition = 2, RULE_variableDefinition = 3, 
		RULE_functionDefinition = 4, RULE_parameters = 5, RULE_param = 6, RULE_statement = 7, 
		RULE_type = 8, RULE_atomType = 9, RULE_components = 10, RULE_componentList = 11, 
		RULE_component = 12, RULE_expression = 13, RULE_constExpression = 14, 
		RULE_postfixOperator = 15, RULE_prefixOperator = 16, RULE_multiplicativeOperators = 17, 
		RULE_additiveOperators = 18, RULE_relationalOperators = 19, RULE_conjuctiveOperators = 20, 
		RULE_disjunctiveOperators = 21, RULE_ptrconst = 22, RULE_voidconst = 23, 
		RULE_boolconst = 24, RULE_charconst = 25, RULE_intconst = 26, RULE_strconst = 27, 
		RULE_name = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "definitions", "typeDefinition", "variableDefinition", "functionDefinition", 
			"parameters", "param", "statement", "type", "atomType", "components", 
			"componentList", "component", "expression", "constExpression", "postfixOperator", 
			"prefixOperator", "multiplicativeOperators", "additiveOperators", "relationalOperators", 
			"conjuctiveOperators", "disjunctiveOperators", "ptrconst", "voidconst", 
			"boolconst", "charconst", "intconst", "strconst", "name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'^'", "'not'", "'+'", "'-'", null, null, "':'", 
			"','", "'.'", "'<'", "'>'", "';'", "'nil'", "'none'", "'or'", "'and'", 
			"'sizeof'", "'void'", "'bool'", "'char'", "'int'", "'if'", "'else'", 
			"'then'", "'return'", "'while'", null, null, null, "'{'", "'}'", "'('", 
			"')'", "'['", "']'", "'=='", "'!='", "'<='", "'>='", "'/'", "'*'", "'%'", 
			"'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENTS", "STRING", "CHARACTER", "CARET", "NOT", "PLUS", "MINUS", 
			"PREFIXOPERATOR", "POSTFIXOPERATOR", "COLON", "COMMA", "DOT", "LESS", 
			"GREATER", "SEMICOLON", "NIL", "NONE", "OR", "AND", "SIZEOF", "VOID", 
			"BOOL", "CHAR", "INT", "IF", "ELSE", "THEN", "RETURN", "WHILE", "BOOLVAL", 
			"IDENTIFIER", "NUMBER", "LBRACE", "RBRACE", "LPARENTHESIS", "RPARENTHESIS", 
			"LBRACKET", "RBRACKET", "EQUALS_R", "NOTEQUALS_R", "LESS_OR_EQUALS_R", 
			"GREATER_OR_EQUALS_R", "DIVIDE", "STAR", "PERCENT", "EQUALS", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lang24Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private Location loc(Token tok) { return new Location((LocLogToken)tok); }
		private Location loc(Token     tok1, Token     tok2) { return new Location((LocLogToken)tok1, (LocLogToken)tok2); }
		private Location loc(Token     tok1, Locatable loc2) { return new Location((LocLogToken)tok1, loc2); }
		private Location loc(Locatable loc1, Token     tok2) { return new Location(loc1, (LocLogToken)tok2); }
		private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1, loc2); }

	public Lang24Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AstNodes ast;
		public DefinitionsContext definitions;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Lang24Parser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((SourceContext)_localctx).definitions = definitions();
			setState(59);
			match(EOF);
			((SourceContext)_localctx).ast =  ((SourceContext)_localctx).definitions.ast; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public AstNodes ast;
		public TypeDefinitionContext typeDefinition;
		public VariableDefinitionContext variableDefinition;
		public FunctionDefinitionContext functionDefinition;
		public List<TypeDefinitionContext> typeDefinition() {
			return getRuleContexts(TypeDefinitionContext.class);
		}
		public TypeDefinitionContext typeDefinition(int i) {
			return getRuleContext(TypeDefinitionContext.class,i);
		}
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);

		    var nodes = new ArrayList<AstNode>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(71);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(62);
					((DefinitionsContext)_localctx).typeDefinition = typeDefinition();
					nodes.add(((DefinitionsContext)_localctx).typeDefinition.value);
					}
					break;
				case 2:
					{
					setState(65);
					((DefinitionsContext)_localctx).variableDefinition = variableDefinition();
					nodes.add(((DefinitionsContext)_localctx).variableDefinition.value);
					}
					break;
				case 3:
					{
					setState(68);
					((DefinitionsContext)_localctx).functionDefinition = functionDefinition();
					 nodes.add(((DefinitionsContext)_localctx).functionDefinition.value);
					}
					break;
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			 ((DefinitionsContext)_localctx).ast =  new AstNodes(loc(_localctx.start, getCurrentToken()), nodes); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefinitionContext extends ParserRuleContext {
		public AstTypDefn value;
		public NameContext name;
		public TypeContext type;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(Lang24Parser.EQUALS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefinition; }
	}

	public final TypeDefinitionContext typeDefinition() throws RecognitionException {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((TypeDefinitionContext)_localctx).name = name();
			setState(78);
			match(EQUALS);
			setState(79);
			((TypeDefinitionContext)_localctx).type = type();
			((TypeDefinitionContext)_localctx).value =  new AstTypDefn(loc(_localctx.start, ((TypeDefinitionContext)_localctx).type.value), ((TypeDefinitionContext)_localctx).name.value.name, ((TypeDefinitionContext)_localctx).type.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDefinitionContext extends ParserRuleContext {
		public AstVarDefn value;
		public NameContext name;
		public TypeContext type;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(Lang24Parser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((VariableDefinitionContext)_localctx).name = name();
			setState(83);
			match(COLON);
			setState(84);
			((VariableDefinitionContext)_localctx).type = type();
			((VariableDefinitionContext)_localctx).value =  new AstVarDefn(loc(_localctx.start, ((VariableDefinitionContext)_localctx).type.value), ((VariableDefinitionContext)_localctx).name.value.name, ((VariableDefinitionContext)_localctx).type.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public AstFunDefn value;
		public NameContext name;
		public ParametersContext pars;
		public TypeContext type;
		public StatementContext stmt;
		public DefinitionsContext defns;
		public Token RBRACE;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode LPARENTHESIS() { return getToken(Lang24Parser.LPARENTHESIS, 0); }
		public TerminalNode RPARENTHESIS() { return getToken(Lang24Parser.RPARENTHESIS, 0); }
		public TerminalNode COLON() { return getToken(Lang24Parser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(Lang24Parser.EQUALS, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(Lang24Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Lang24Parser.RBRACE, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDefinition);

		    boolean isStmt = false;
		    boolean isDefns = false;
		    boolean arePars = false;

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((FunctionDefinitionContext)_localctx).name = name();
			setState(88);
			match(LPARENTHESIS);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CARET || _la==IDENTIFIER) {
				{
				arePars = true;
				setState(90);
				((FunctionDefinitionContext)_localctx).pars = parameters();
				}
			}

			setState(93);
			match(RPARENTHESIS);
			setState(94);
			match(COLON);
			setState(95);
			((FunctionDefinitionContext)_localctx).type = type();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				isStmt = true;
				setState(97);
				match(EQUALS);
				setState(98);
				((FunctionDefinitionContext)_localctx).stmt = statement();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LBRACE) {
					{
					isDefns = true;
					setState(100);
					match(LBRACE);
					setState(101);
					((FunctionDefinitionContext)_localctx).defns = definitions();
					setState(102);
					((FunctionDefinitionContext)_localctx).RBRACE = match(RBRACE);
					}
				}

				}
			}


			    var locValue = isDefns ? loc(_localctx.start, ((FunctionDefinitionContext)_localctx).RBRACE)
			        : loc(_localctx.start, isStmt ? ((FunctionDefinitionContext)_localctx).stmt.value
			        : ((FunctionDefinitionContext)_localctx).type.value);

			    ((FunctionDefinitionContext)_localctx).value =  new AstFunDefn(
			        locValue,
			        ((FunctionDefinitionContext)_localctx).name.value.name,
			        arePars ? ((FunctionDefinitionContext)_localctx).pars.value : null,
			        ((FunctionDefinitionContext)_localctx).type.value,
			        isStmt ? ((FunctionDefinitionContext)_localctx).stmt.value: null,
			        isDefns ? ((FunctionDefinitionContext)_localctx).defns.ast : null);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public AstNodes value;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Lang24Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Lang24Parser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			param();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(111);
				match(COMMA);
				setState(112);
				param();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			    ((ParametersContext)_localctx).value =  new AstNodes((LocLogToken) getCurrentToken() , _localctx.param()
			        .stream()
			        .map(p -> p.value)
			        .toList());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public AstFunDefn.AstParDefn value;
		public Token CARET;
		public NameContext name;
		public TypeContext type;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(Lang24Parser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode CARET() { return getToken(Lang24Parser.CARET, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CARET) {
				{
				setState(120);
				((ParamContext)_localctx).CARET = match(CARET);
				}
			}

			setState(123);
			((ParamContext)_localctx).name = name();
			setState(124);
			match(COLON);
			setState(125);
			((ParamContext)_localctx).type = type();

			    var locValue = ((ParamContext)_localctx).CARET == null ? loc(((ParamContext)_localctx).name.value, ((ParamContext)_localctx).type.value) : loc(((ParamContext)_localctx).CARET, ((ParamContext)_localctx).type.value);

			    ((ParamContext)_localctx).value =  ((ParamContext)_localctx).CARET != null
			        ? new AstFunDefn.AstRefParDefn(locValue, ((ParamContext)_localctx).name.value.name, ((ParamContext)_localctx).type.value)
			        : new AstFunDefn.AstValParDefn(locValue, ((ParamContext)_localctx).name.value.name, ((ParamContext)_localctx).type.value);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
